now : Version next
 * Add --log-file option.
 * Fixed newcamd protocol issues when OSCAM disappeared.

2012-02-24 : Version 6.0
 * Add --output-tos (-g) option used to set output TOS value.
 * Add --input-dump (-W) option used save input stream in file.
 * Add --pid-report (-j) option used to turn on PID reporting.
 * Add RTP output enabled by --output-rtp (-r) option.
 * Add --output-rtp-ssrc (-k) option used to set RTP SSRC.
 * A bug was fixed that prevented tsdecrypt from working if CAMD server
   was not available for couple of minutes.

2011-12-23 : Version 5.0
 * Add --bench (-b) option that benchmarks libdvbcsa decryption.
 * Remove --camd-pkt-delay (-y) option. This workaround is no longer needed.
 * Fix payload offset detection, a bug which broke packets that have
   adaptation with whole packet size (libtsfuncs).
 * Add --input-service (-M) option, to choose service id (program) in MPTS input.
 * When the input is MPTS and output filtering is enabled, rewrite output
   PAT to include only the single program that is decoded.
 * Parse SDT and display provider and service name.
 * Add --output-nit-pass (-y) to enable NIT pass through.
 * Add --output-eit-pass (-w) to enable EIT (EPG) pass through.
 * Add --output-tdt-pass (-x) to enable TDT/TOT pass through.
 * Add support for newcamd CAMD protocol.
 * Add ECM/EMM queues depth limit to avoid allocating too much memory.

2011-11-18 : Version 4.0
 * Set CAMD sockets NODELAY to avoid OSCAM errors when many packets are sent.
 * Add --syslog parameter to enable local syslog logging.
 * Set thread names under Linux.
 * notify: Added no_code_word/code_word_ok events.
 * notify: Added input_timeout/input_ok events.
 * notify: Added start/stop events.
 * notify: Added option to execute external script on event.

2011-11-14 : Version 3.2
 * Fixed bug that prevented tsdecrypt from working at all :(

2011-11-12 : Version 3.1
 * Add debug level 5 (full mpeg ts packet dump).