@@ -34,6 +34,7 @@ Input options:
  -R --input-rtp             | Enable RTP input
  -z --input-ignore-disc     | Do not report discontinuty errors in input.
  -M --input-service <srvid> | Choose service id when input is MPTS.
+ -T --input-buffer <ms>     | Set input buffer time in ms. Default: 0
  -W --input-dump <filename> | Save input stream in file.
 
 Output options:
